Fixed rendering of links on new banners Gift&Mounting Set

--- a/sections/go-cart.liquid
+++ b/sections/go-cart.liquid
@@ -755,7 +755,7 @@
                             <figcaption class="mount__step-captions">
                             <p class="mount__step-number">Step 1.</p>
                             <p class="mount__step-text">Glue the cardboard to the surface.</p>
-                            <p class="mount__step-text-details">Underlay included</p>
+                            <p class="mount__step-text-details">Underlay included<br /><br /></p>
                             </figcaption>
                         </figure>
                     
@@ -764,7 +764,7 @@
                             <figcaption class="mount__step-captions">
                             <p class="mount__step-number">Step 2.</p>
                             <p class="mount__step-text">Move the puzzle onto the cardboard.</p>
-                            <p class="mount__step-text-details"><br /></p>
+                            <p class="mount__step-text-details"><br /><br /></p>
                             </figcaption>
                         </figure>
                     
@@ -773,7 +773,7 @@
                             <figcaption class="mount__step-captions">
                             <p class="mount__step-number">Step 3.</p>
                             <p class="mount__step-text">Turn the puzzle over.</p>
-                            <p class="mount__step-text-details"><br /></p>
+                            <p class="mount__step-text-details"><br /><br /></p>
                             </figcaption>
                         </figure>
                     
@@ -782,7 +782,7 @@
                             <figcaption class="mount__step-captions">
                             <p class="mount__step-number">Step 4.</p>
                             <p class="mount__step-text">Stick the film onto the puzzle.</p>
-                            <p class="mount__step-text-details"><br /></p>
+                            <p class="mount__step-text-details"><br /><br /></p>
                             </figcaption>
                         </figure>
                     
@@ -791,7 +791,7 @@
                             <figcaption class="mount__step-captions">
                             <p class="mount__step-number">Step 5.</p>
                             <p class="mount__step-text">Smooth the film over the puzzle.</p>
-                            <p class="mount__step-text-details"><br /></p>
+                            <p class="mount__step-text-details"><br /><br /></p>
                             </figcaption>
                         </figure>
                     
@@ -800,7 +800,7 @@
                             <figcaption class="mount__step-captions">
                             <p class="mount__step-number">Step 6.</p>
                             <p class="mount__step-text">Cut off excess film.</p>
-                            <p class="mount__step-text-details"><br /></p>
+                            <p class="mount__step-text-details"><br /><br /></p>
                             </figcaption>
                         </figure>
                     
@@ -818,7 +818,7 @@
                             <figcaption class="mount__step-captions">
                             <p class="mount__step-number">Step 8.</p>
                             <p class="mount__step-text">Fix the puzzle to the wall.</p>
-                            <p class="mount__step-text-details"><br /></p>
+                            <p class="mount__step-text-details"><br /><br /></p>
                             </figcaption>
                         </figure>
                     </div>
