Fix background position on Decorate Walls banner

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -130,6 +130,7 @@
       .banner-inspirational-gift_link {
         padding-left: 130px;
         padding-top: 15px;
+        display: none;
       }
       .banner-inspirational-gift_link a{
         text-decoration: underline;
@@ -144,7 +145,7 @@
         margin-top: 40px;
         background-image: url({{'banner-decorate-walls_mob_bg.png' | asset_url}});
         background-size: cover;
-        background-position: bottom;
+        background-position: left;
         height: 350px;
         color: #000000;
       }
@@ -163,6 +164,7 @@
       .banner-decorate-walls_howitworks {
           padding-left: 20px;
           padding-top: 10px;
+          display: none;
         }
       .advantage {
         margin-top: 40px;
@@ -375,6 +377,9 @@
     #see-more {
       cursor: pointer;
       font-weight: 600;
+    }
+    .getsocial {
+      display: none;
     }
     .getsocial.gs-inline-group.gs-big-counter {
         margin-bottom: 5px !important;
