New coloring popup added

--- a/snippets/coloring-book-popup.liquid
+++ b/snippets/coloring-book-popup.liquid
@@ -9,7 +9,7 @@
         </div>
         <div class="coloring-book_text">
             <p class="header">Coloring Sheet Majestic Wolf</p>
-            <p class="subtitle">GET FREE! POWER YOUR CREATIVITY!</p>
+            <p class="subtitle">Get Free! Power Your Creativity!</p>
         </div>
         <div class="coloring-book-subscribe">
             <p>Sign up and get your free PDF file for printing</p>
@@ -56,27 +56,28 @@
         text-align: center;
         font-size: 24px;
         font-weight: 500;
+        padding-top: 10px;
         }
-        p.subtitle {
-           font-size: 24px;
-           font-weight: 600;
-           padding: 20px 25px;
-           color: #ff862d;
-        }
-        .coloring-book-subscribe {
-            padding-top: 50px;
-        }
-        .coloring-book-subscribe form{
-            display: flex;
-            flex-direction: column;
-        }
-        .coloring-book-subscribe {
-            width: 300px;
-            margin: 0 auto;
-        }
-        .coloring-book_text {
-            text-align: center;
-        }
+    p.subtitle {
+        font-size: 18px;
+        font-weight: 600;
+        padding: 20px 25px;
+        color: #ff862d;
+    }
+    .coloring-book-subscribe {
+            padding-top: 10px;
+    }
+    .coloring-book-subscribe form{
+        display: flex;
+        flex-direction: column;
+    }
+    .coloring-book-subscribe {
+        width: 300px;
+        margin: 0 auto;
+    }
+    .coloring-book_text {
+        text-align: center;
+    }
 </style>
 
 <!-- Magnific Popup core CSS file -->
