--- a/snippets/coloring-book-popup.liquid
+++ b/snippets/coloring-book-popup.liquid
@@ -90,7 +90,7 @@
 <script>
     function showpopup(popupId) {
         console.log('Init showpopup');
-        //if (!$.cookie('cbPopupShown') && $(popupId).length) {
+        if (!$.cookie('cbPopupShown') && $(popupId).length) {
             $.magnificPopup.open({
                 items: {
                     src: popupId,
@@ -104,7 +104,7 @@
             });
             console.log('Popup close has been initiated');
             $.cookie('cbPopupShown', true, { expires: 240 });
-   // }
+    }
 }
 $('#subscribe-button').on('click',function(e){    
           e.preventDefault();
@@ -133,5 +133,5 @@ $('#subscribe-button').on('click',function(e){
             });
        });
 
-//setTimeout ( showpopup, 10000, '#coloring-book');
+setTimeout ( showpopup, 10000, '#coloring-book');
 </script>
